--- a/project2022.html
+++ b/project2022.html
@@ -49,9 +49,9 @@
       <img src="om.png.jpg"width="100px"height="80px"></img>
       <div class="course-col">
         <h3>NAME</h3>
-        <P>Om Kumar</P>
+        <P>Md.shakil</P>
         <h3>REGISTRATION NUMBER</h3>
-        <p>12208141</p>
+        <p>12201776</p>
       </div>
       <div class="course-col">
         <h3>ATTENDENCE VIEW</h3>
